Fixed spacing on card columns

--- a/css/theme_dbf.css
+++ b/css/theme_dbf.css
@@ -26,7 +26,7 @@ a {
   padding: 5px;
 }
 
-@media (min-width: 992px) {
+@media (min-width: 768px) {
     .card-columns {
         column-count: 2;
     }
